it works (sort of)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,14 +1,6 @@
 <html>
-  <head>
-    {% if title %}
-    <title>{{ title }} - microblog</title>
-    {% else %}
-    <title>Welcome to microblog</title>
-    {% endif %}
-  </head>
+  <title>Word Unscrambler</title>
   <body>
-    <div>Microblog: <a href="/index">Home</a></div>
-    <hr>
     {% block content %}{% endblock %}
   </body>
 </html>
