--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,21 @@
-<html>
-  <head>
-    <title>Word Unscrambler</title>
-  </head>
-  <body>
-      <h1>Enter letters here:</h1>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+{% autoescape false %}
+  <h1>Word Unscrambler</h1>
+  <form action="" method="post" name="login">
+      {{ form.hidden_tag() }}
+      <p>
+        Enter Letters Here (no more than 9):<br>
+        {{ form.letters(size=10) }}<br>
+      </p>
+      <p>
+        Enter Language codes Here
+        {{ form.languages(size=80) }}<br>
+      </p>
+      <p><input type="submit" value="Unscramble"></p>
+      <h2>Results By Language</h2>
+      <p> {{ results }} </p>
+   </form>
+{% endautoescape %}
+{% endblock %}
